# copilot-mail-prompter

./: .gitignore  README.md  build.spec  config.toml  pyproject.toml
.claude/: settings.local.json
ctk-desktop-app/: SKILL.md
ctk-desktop-app/assets/: app.py  build.spec  gitignore  package_init.py  test_app.py
ctk-desktop-app/references/: packaging.md  pyproject.md
src/copilot_mail_prompter/: __init__.py  app.py
src/mail_prompt_forge/: __init__.py  app.py
tests/: test_app.py
