[project]
name = "copilot-mail-prompter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "kerokeropyu", email = "sharkchu7@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "customtkinter>=5.2.2",
]

[project.scripts]
copilot-mail-prompter = "copilot_mail_prompter:main"

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pyinstaller>=6.21.0",
    "pytest>=9.1.1",
    "ruff>=0.15.19",
]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["ctk-desktop-app"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["customtkinter.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
